--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -19,9 +19,9 @@
 
 	<dependencies>
         <dependency>
-            <groupId>com.rhinomarket</groupId>
-            <artifactId>domain</artifactId>
-            <version>1.0</version>
+			<groupId>com.dynamos</groupId>
+			<artifactId>domain</artifactId>
+			<version>2.0</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,15 +35,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
@@ -51,9 +45,9 @@
             <version>2.1.2.RELEASE</version>
         </dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.6.1</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
     </dependencies>
 	
