--- a/domain/src/test/resources/config/application.yml
+++ b/domain/src/test/resources/config/application.yml
@@ -1,36 +1,25 @@
 spring:
-    profiles:
-        active: dev
     datasource:
-        driver-class-name: org.postgresql.ds.PGSimpleDataSource
-        url: jdbc:postgresql://localhost:5432/rhino
+        url: jdbc:h2:mem:dynamos
         name:
-        username: postgres
-        password: 12345678
+        username: sa
+        password: pass
     h2:
         console:
             enabled: false
     jpa:
-        database-platform: com.rhinomarket.infra.config.util.FixedPostgreSQL82Dialect
-        database: POSTGRESQL
+        database-platform:  org.hibernate.dialect.H2Dialect
+        database: h2
         show_sql: true
         properties:
+            hibernate.hbm2ddl.auto : create
             hibernate.cache.use_second_level_cache: true
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
-            hibernate.hbm2ddl.auto : create
             hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     mail:
         host: localhost
-    messages:
-        cache-seconds: 1
-    thymeleaf:
-        cache: false
-    devtools:
-      livereload:
-        enabled: true
-      restart:
-        enabled: true
+
 
 server:
     port: 8080
