--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "bower": "^1.7.7",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0"
   },
   "author": "Adelmo Alves",
   "license": "Apache-2.0",
