--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -49,7 +49,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.22</version>
+		</dependency>
+
+	</dependencies>
 	
 	<build>
 		<plugins>
