--- a/panel/pom.xml
+++ b/panel/pom.xml
@@ -30,10 +30,10 @@
             <artifactId>core</artifactId>
             <version>2.2.1</version>
         </dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
